# dzweb

./: .dockerignore  .env.example  .gitignore  .python-version  .test.md.swp  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE.txt  PRD.md  README.md  SEO_SETUP_GUIDE.md  diagnose_mail.py  docker-compose.yml  package-lock.json  pyproject.toml  reproduce_bug.py  requirements.txt
.gemini/context/: api.md  auth.md  db.md  i18n.md  maintenance.md  media.md
.github/: copilot-instructions.md
.playwright-cli/: page-2026-03-02T07-35-05-593Z.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
dzweb/: .__init__.py.swp  .schema.sql.swp  __init__.py  db.py  lang.py  logging.py  mail.py  schema.sql
dzweb/routes/: __init__.py  (+12 more)
tests/: conftest.py  test_admin_auth.py  test_admin_case_compat.py  test_case_edit.py  test_case_modular_api.py  test_case_modular_db.py  test_case_refactor.py  test_case_slug_manual.py  test_case_ui_sync.py  test_cleanup.py  test_company_name.py  test_contact.py  test_db.py  test_docker_compose_config.py  test_docker_config.py  test_edit_hire_link.py  test_favicon.py  test_footer.py  test_human_hire_auth.py  test_image_cleanup.py  test_image_utils.py  test_nav.py  test_nav_bug.py  test_product_api.py  test_product_display_auth.py  test_product_images.py  test_remove_flash.py  test_remove_flash_v2.py  test_remove_location.py  test_seo.py  test_seo_v2.py  test_thumb_cli.py  test_thumbnail_contain.py  test_user_apps.py  test_webp_cli.py  test_webp_conversion.py  test_webp_integration.py  test_webp_support.py
(+249 files in other folders)
